# FractalRenderingApp

./: .gitignore  .gitmodules  LICENSE  README.md  app_glfw.py  app_pygame.py  debug_app.py  debug_file.py  interactive_app.py  main.py  main_app.py  main_create_exe.py  main_debug.py  main_render_text.py  mandelbrot.py  requirements.txt
assets/: cmaps_all.txt  cmaps_sequential.txt
cpp/: build_linux.sh  build_windows.sh
cpp/source/: CMakeLists.txt  config.h.in  debug_main.cpp  mandelbrot.cpp  mandelbrot.h  python_wrappers.cpp  wrappers.cpp
fractals/: canvas.py  clock.py  color.py  config.py  default_config.py  fractal_render.py  fractals.py  framebuffer.py  interactive_app.py  mandelbrot.py  render_canvas.py  render_fractal.py  render_text.py  render_texture.py  shader_utils.py  text_render.py
fractals/assets/: cmaps_all_256.txt  cmaps_diverging.txt  cmaps_other.txt  cmaps_qualitative.txt  cmaps_sequential.txt  config.json  config.txt  keymap.txt  settings.txt
fractals/shaders/: base.vert  blit_texture.vert  fractal_base.vert  fractal_color.frag  fractal_julia.frag  fractal_mandelbrot.frag  text_render.frag  text_render.vert  texture_render.frag
install/: main_app.spec  main_install.py
shaders/: fragment_color.glsl  fragment_iter.glsl  fragment_main.glsl  fragment_post.glsl  fragment_shader.glsl  fragment_shader_main.glsl  fragment_shader_post.glsl  mandelbrot_set.frag  vertex.glsl  vertex_shader.glsl
text_rendering/: render_text.py  render_text_LearnOpenGL.py
text_rendering/shaders/: render_text.frag  render_text.vert
